# Arbiter

./: .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml
.github/workflows/: arbiter-ci.yml
backend/: Dockerfile  docker-compose.yml  requirements.txt
backend/app/: main.py
backend/app/api/: endpoints.py  gateway.py  runs.py
backend/app/core/: celery_app.py  config.py  database.py
backend/app/models/: db_models.py
backend/app/services/: adversarial.py  evaluator.py  inference_client.py  memory_manager.py  policy_evaluator.py  security_scanner.py  statistics.py
backend/app/tasks/: evaluation.py
backend/tests/: test_adversarial.py  test_api_runs.py  test_evaluator.py  test_inference.py  test_security_gateway.py  test_statistics.py
cli/: pyproject.toml
cli/arbiter_cli/: __init__.py  main.py
deploy/k8s/: deployment.yaml
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: TriggerRunModal.tsx
frontend/src/pages/: CompareRuns.tsx  RunDetail.tsx
