[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arbiter-cli"
version = "0.1.0"
description = "CLI tool to trigger and analyze evaluations on the Arbiter platform"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
arbiter = "arbiter_cli.main:app"
